# Inferentia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit_tests.yml  version_bump.yml
inferentia/baseline/: hf_baseline.py  vllm_inference.py
inferentia/baseline/notebooks/: hf_baseline.ipynb  vllm_inference.ipynb
