[project]
name = "inferentia"
version = "0.4.0"
description = "Building an LLM Inference Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long 
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
